Added slider symptom component

--- a/app/templates/patient/input.hbs
+++ b/app/templates/patient/input.hbs
@@ -18,5 +18,8 @@
 		{{#bool-symptom}}
 			{{sym}}
 		{{/bool-symptom}}
+		{{#slider-symptom}}
+			{{sym}}
+		{{/slider-symptom}}
 	{{/each}}
 </div>
