--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,5 +1,6 @@
 .symptom-block {
-	margin: 2%;
-	padding: 5px;
-	
+	margin: 5px;
+	padding:5px;
+	border-radius: 10px;
+    border: 2px solid #73AD21;
 }
