--- a/app/templates/components/slider-symptom.hbs
+++ b/app/templates/components/slider-symptom.hbs
@@ -1,12 +1,18 @@
-<div class="slider-symptom">
-	{{yield}}
-	
-	{{ui-slider 
-		ticks='1,2,3,4,5,6,7,8,9,10'
-		ticksLabels='1,2,3,4,5,6,7,8,9,10'
-		ticksSnapBounds=1
-		tooltip='hide'
-		min=1
-		max=10
-	}}
+<div class="container-fluid slider-symptom">
+	<div class="row">
+		<div class="col-xs-6">
+			{{yield}}
+		</div>
+		
+		<div class="col-xs-6">
+			{{ui-slider 
+				ticks='1,2,3,4,5,6,7,8,9,10'
+				ticksLabels='1,2,3,4,5,6,7,8,9,10'
+				ticksSnapBounds=1
+				tooltip='hide'
+				min=1
+				max=10
+			}}
+		</div>
+	</div>
 </div>
