prep for Dan and Steve

--- a/app/templates/patient/input.hbs
+++ b/app/templates/patient/input.hbs
@@ -51,7 +51,7 @@
 					</span>
 					<span>
 						<button class="btn btn-fill btn-sm btn-danger pull-right" style="margin-right: 15px;" {{action "resetLog"}}>
-							<span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>&nbsp;Reset Log
+							<span class="glyphicon glyphicon-erase" aria-hidden="true"></span>&nbsp;Reset Log
 						</button>
 					</span>
 				</div>
