--- a/app/templates/patient/backlog.hbs
+++ b/app/templates/patient/backlog.hbs
@@ -1,1 +1,17 @@
-{{outlet}}
+<div class="panel panel-default">
+	<div class="panel-body">
+		
+		<div class="table-full-width">
+			<table class="table">
+				<thead>
+					<tr>
+					
+					</tr>
+				</thead>
+				<tbody>
+					
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
