--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,39 +1,68 @@
 .symptom-block { 
   margin: 2%; 
   padding: 5px; 
+   
 }
  
 @font-face {
+ 
 font-family: Acherus Grotesque;
 src: url('fonts/acherus_grotesque_-_regular-webfont.woff') format('woff');
+ 
 }
  
-
+.ember-power-select-multiple-option {
+	background-color: #c0c0c0;
+	color: black;
+	
+}
  
 body {
+ 
     background-color: #f7f6f6;
   color: black;
   font-family: Acherus Grotesque;
+ 
 }
  
-
+.ember-power-select-trigger-multiple-input{
+	
+	color: white;
+}
+ 
+ .col-xs-6{
+	 
+	 float:left;
+ }
+ 
+.slider slider-horizontal{
+	 
+	 float:left; 
+	clear: left;
+ }
  
 h1 {
-    color: black; 
+ 
+    color: black;
+ 
 }
  
 
  
 #ember-bootstrap-wormhole {
+ 
     border-top:solid #c02410 50px;
+ 
 }
  
 
  
 #ember-power-select-option{
+ 
   background-color: #c0c0c0;
     padding: 20px;
     font-size: 30px;
+ 
 }
  
 
@@ -43,6 +72,7 @@ h1 {
 
  
 .ember-power-select-trigger-multiple-input {
+ 
   font-family: Acherus Grotesque;
     background-color: #c0c0c0;
     color: white;
@@ -50,18 +80,23 @@ h1 {
     font-size: 20px;
     border: none;
     cursor: pointer;
+ 
 }
  
 
  
 .bool-symptom {
+ 
   font-family: Acherus Grotesque;
-  background-color: #c0c0c0;
+    background-color: #c0c0c0;
   color: black;
   font-size: 20px;
-  padding: 10px;
+    padding: 10px;
   border: 15px solid #f7f6f6;
   outline-color: #f7f6f6;
+ 
+    
+ 
 }
  
 
@@ -69,12 +104,15 @@ h1 {
 
  
 .slidecontainer {
+ 
     width: 100%;
+ 
 }
  
 
  
 .slider {
+ 
     -webkit-appearance: none;
     width: 100%;
     height: 25px;
@@ -82,32 +120,44 @@ h1 {
     outline: none;
     opacity: 0.7;
     -webkit-transition: .2s;
-    transition: opacity .2s; 
+    transition: opacity .2s;
+ 
 }
  
 
  
 .slider:hover {
     opacity: 1;
+ 
 }
  
 
  
 .slider::-webkit-slider-thumb {
+ 
     -webkit-appearance: none;
     appearance: none;
     width: 25px;
     height: 25px;
     background: #801515;
     cursor: pointer;
+ 
 }
  
-
+#ember332{
+	
+	width: 328px;
+	resize: none;
+	overflow: auto;
+	
+}
  
 .slider::-moz-range-thumb {
+ 
     width: 25px;
     height: 25px;
     background: #801515;
     cursor: pointer;
+ 
 }
  
