--- a/app/templates/patient/backlog.hbs
+++ b/app/templates/patient/backlog.hbs
@@ -1,17 +1,20 @@
 <div class="panel panel-default">
-	<div class="panel-body">
-		
-		<div class="table-full-width">
-			<table class="table">
-				<thead>
-					<tr>
-					
-					</tr>
-				</thead>
-				<tbody>
-					
-				</tbody>
-			</table>
-		</div>
-	</div>
+  <div class="panel-body">
+
+    <div class="table-full-width">
+      <table class="table">
+        <thead>
+          <tr>
+            {{#each patients as |patient|}}
+            <th scope="col">{{patient.name}}</th>
+            <th scope="col">{{patient.name}}</th>
+            <th scope="col">{{patient.name}}</th>
+			{{/each}}
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
