--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -19,10 +19,16 @@ src: url('fonts/acherus_grotesque_-_regular-webfont.woff') format('woff');
  
 body {
  
-    background-color: #f7f6f6;
+  background-color: #f7f6f6;
   color: black;
   font-family: Acherus Grotesque;
  
+}
+
+.panel-body{
+	
+	background-color: #f7f6f6;
+	
 }
  
 .ember-power-select-trigger-multiple-input{
@@ -65,9 +71,12 @@ h1 {
  
 }
  
-
  
-
+.container-fluid{
+	
+	width: 328px;
+	
+}
  
 
  
@@ -88,12 +97,14 @@ h1 {
 .bool-symptom {
  
   font-family: Acherus Grotesque;
-    background-color: #c0c0c0;
+  background-color: #c0c0c0;
   color: black;
-  font-size: 20px;
-    padding: 10px;
-  border: 15px solid #f7f6f6;
+  width: 322px;
+  font-size: 30px;
+  padding: 8px;
+  border: 5px solid #f7f6f6;
   outline-color: #f7f6f6;
+  margin-left: 0px;
  
     
  
