--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,6 +8,8 @@
 		{{#navbar.nav as |nav|}}
 			{{#nav.item}}{{#nav.link-to "patient.backlog"}}Backlog{{/nav.link-to}}{{/nav.item}}
 			{{#nav.item}}{{#nav.link-to "patient.input"}}New Log{{/nav.link-to}}{{/nav.item}}
+			{{#nav.item}}{{#nav.link-to "data"}}View Data{{/nav.link-to}}{{/nav.item}}
+
 		{{/navbar.nav}}
 	{{/navbar.content}}
 {{/bs-navbar}}
