--- a/app/templates/patient/input.hbs
+++ b/app/templates/patient/input.hbs
@@ -3,15 +3,17 @@
 	<div class="panel-heading">
 		<h1>Today's Symptoms:</h1>
 
-		{{#power-select-multiple
-			options=symptomOptions
-			placeholder="Select your current symptoms"
-			selected=selectedSymptoms
-			onchange=(action (mut selectedSymptoms))
-			as |symptom|
-		}}
-		  {{symptom.name}}
-		{{/power-select-multiple}}
+		<div class="multi-select">
+			{{#power-select-multiple
+				options=symptomOptions
+				placeholder="Select your current symptoms"
+				selected=selectedSymptoms
+				onchange=(action (mut selectedSymptoms))
+				as |symptom|
+			}}
+			  {{symptom.name}}
+			{{/power-select-multiple}}
+		</div>
 	</div>
 	
 	<div class="panel-body">
@@ -20,15 +22,15 @@
 				<div class="row">
 					<div class="symptom-block">
 						{{#if sym.isSlider}}
-							{{#slider-symptom}}
+							{{#slider-symptom value=sym.value}}
 								{{sym.name}}
 							{{/slider-symptom}}
 						{{else if sym.isText}}
-							{{#text-symptom}} 
+							{{#text-symptom value=sym.value}} 
 								{{sym.name}} 
 							{{/text-symptom}}
 						{{else}}
-							{{#bool-symptom}}
+							{{#bool-symptom value=sym.value}}
 								{{sym.name}}
 							{{/bool-symptom}}
 						{{/if}}
@@ -38,7 +40,7 @@
 			
 			<div class="row">
 				<div class="additional-notes">
-					{{textarea placeholder="Additional notes..." value=additionalNotes}}
+					{{textarea placeholder="Additional notes..." value=additionalNotes class="my-textarea"}}
 				</div>
 			</div>
 			
