--- a/app/templates/patient/backlog.hbs
+++ b/app/templates/patient/backlog.hbs
@@ -42,7 +42,11 @@
 														<td></td>
 													{{/if}}
 												</tr>
+												
 											{{/each}}
+											<tr>
+													<td>{{log.notes}}</td>
+												</tr>
 									</tbody>
 								</table>
 							</div>
