--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,8 @@
 {{#bs-navbar type=(if inverse 'inverse') fluid=fluid collapsed=collapsed onCollapse=(action (mut collapsed) true) onExpand=(action (mut collapsed) false) as |navbar|}}
 	<div class="navbar-header">
+	
 		{{navbar.toggle}}
-		{{#link-to "index" class="navbar-brand"}}Brand{{/link-to}}
+		{{#link-to "index" class="navbar-brand"}}VitalLogs{{/link-to}}
 	</div>
 
 	{{#navbar.content}}
